--- a/templates/base.html
+++ b/templates/base.html
@@ -284,11 +284,15 @@
                             <i class="fas fa-home"></i>Inicio
                         </a>
                     </li>
+                    
+                    <!-- Solo mostrar Alumnos si es control escolar -->
+                    {% if user.tipo_usuario == 'control_escolar' %}
                     <li class="nav-item">
                         <a class="nav-link {% if 'student' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'student_list' %}">
                             <i class="fas fa-users"></i>Alumnos
                         </a>
                     </li>
+                    {% endif %}
                     {% if user.tipo_usuario == 'control_escolar' %}
                     <li class="nav-item">
                         <a class="nav-link {% if 'certificate' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'certificate_list' %}">
